# cmdline_rust

./: .gitattributes  notes.md
01_hello_cargo/: Cargo.toml
01_hello_cargo/src/: main.rs
01_hello_cargo/tests/: cli.rs
02_echo/: Cargo.toml
02_echo/src/: main.rs
02_echo/tests/: cli.rs
03_cat/: Cargo.toml
03_cat/src/: lib.rs  main.rs
03_cat/tests/: cli.rs
04_head/: Cargo.toml
04_head/src/: lib.rs  main.rs
04_head/tests/: cli.rs
05_wc/: Cargo.toml
05_wc/src/: lib.rs  main.rs
05_wc/tests/: cli.rs
05_wc/tests/expected/: all.out  atlamal.txt.out  atlamal.txt.stdin.out  empty.txt.out  fox.txt.out
06_uniq/: Cargo.toml
06_uniq/src/: lib.rs  main.rs
06_uniq/tests/: cli.rs
07_find/: Cargo.toml
07_find/src/: lib.rs
07_find/tests/: cli.rs
08_cut/: Cargo.toml
08_cut/src/: lib.rs  main.rs  ranges.rs
08_cut/tests/: cli.rs
09_grep/: Cargo.toml
09_grep/src/: lib.rs  main.rs
09_grep/tests/: cli.rs
10_comm/: Cargo.toml
10_comm/src/: lib.rs  main.rs
10_comm/tests/: cli.rs
11_tail/: Cargo.toml
11_tail/src/: lib.rs  line_perf.rs  main.rs
11_tail/tests/: cli.rs
12_fortune/: Cargo.toml  mk-dat.sh
12_fortune/src/: lib.rs  main.rs
12_fortune/tests/: cli.rs
13_cal/: Cargo.toml
13_cal/src/: date.rs  lib.rs  main.rs
13_cal/tests/: cli.rs
13_cal/tests/expected/: 2-2020.txt  2020.txt  4-2020.txt  5-2020.txt
14_ls/: Cargo.toml
14_ls/src/: lib.rs  main.rs  owner.rs
14_ls/tests/: cli.rs
15_ls/: Cargo.toml
