[package]
name = "fortune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.4"
rand = "0.8.5"
regex = "1.9.5"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
