[package]
name = "cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
chrono = "0.4.31"
clap = "4.4.4"
itertools = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
